<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">找导游</string>

    <!-- 附近导游 -->
    <string name="nearby_guide">附近导游</string>
    <string name="menu_show_map">地图</string>
    <string name="menu_show_list">列表</string>
    <string name="menu_broadcast">广播</string>
    <string name="menu_refresh">定位</string>
    <string name="loading_location">正在获取您的位置...</string>
    <string name="location_failed">定位失败</string>
    <string name="loading_nearby_guide">正在加载附近的导游...</string>

    <!-- 个人记录 -->
    <string name="profile_record">个人记录</string>
    <string name="tourguide">导游</string>
    <string name="tourist">游客</string>
    <string name="invite_booking">预约中</string>
    <string name="invite_cancel">已取消</string>
    <string name="invite_accepted">待评价</string>
    <string name="invite_refused">被拒绝</string>
    <string name="invite_satisfaction">已评价</string>
    <string name="invite_broadcast">广播中</string>
    <string name="satisfaction_good">满意</string>
    <string name="satisfaction_bad">不满意</string>
    <string name="guide_waiting">等待中</string>
    <string name="guide_accepted">已接受</string>
    <string name="guide_refused">已拒绝</string>
    <string name="guide_satisfaction">被评价</string>
    <string name="guide_cancel">被取消</string>
    <string name="guide_accpeted_by_other">广播被其他导游接受</string>

    <!-- 搜索 -->
    <string name="search">搜索</string>
    <string name="city_any">不限</string>
    <string name="need_select_city">请选择城市</string>
    <string name="searching">搜索中...</string>

    <!-- 选择城市 -->
    <string name="select_city_title">选择城市</string>

    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="setting_login">登        录</string>
    <string name="setting_profile">个人主页</string>
    <string name="setting_change_pwd">修改密码</string>
    <string name="setting_guide_authentication">我是导游</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_logout">退出登录</string>
    <string name="logout_dialog_message">退出登录吗？</string>
    <string name="logout_dialog_positive">确认</string>
    <string name="logout_dialog_negative">取消</string>
    <string name="login_dialog_message">您还未登录，确认登录吗？</string>
    <string name="login_dialog_positive">确认</string>
    <string name="login_dialog_negative">取消</string>

    <!-- 登陆 -->
    <string name="login_phone_hint">手机号</string>
    <string name="login_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logining">登录中...</string>
    <string name="login_failed">登录失败</string>

    <!-- 注册 -->
    <string name="register_phone">手机号</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_password">密码</string>
    <string name="register_password_hint">请输入6-30位密码</string>
    <string name="register_password_confirm">密码确认</string>
    <string name="register_password_confirm_hint">请再次输入密码</string>
    <string name="register_name">姓名</string>
    <string name="register_name_hint">请输入1-10位姓名</string>
    <string name="register_verification_code">验证码</string>
    <string name="register_verification_code_hint">请输入验证码</string>
    <string name="register_send_verify_code">发送</string>
    <string name="register_phone_empty">请输入电话号码</string>
    <string name="register_password_empty">输入的密码格式不正确</string>
    <string name="register_password_diff">两次输入的密码不一致</string>
    <string name="register_name_empty">输入姓名格式不正确</string>
    <string name="register_verify_code_empty">请输入验证码</string>
    <string name="registering">注册中...</string>
    <string name="register_failed">注册失败</string>

    <!-- 导游认证 -->
    <string name="guide_identify_title">导游审核</string>
    <string name="guide_id_card">导游证</string>
    <string name="guide_id_card_no">导游证号</string>
    <string name="guide_card_no_hint">请输入导游证号</string>
    <string name="birthday">出生日期</string>
    <string name="birthday_hint">请输入出生日期</string>
    <string name="be_guide_year">领证年份</string>
    <string name="be_guide_year_hint">请输入领证年份</string>
    <string name="travel_agency">旅行社</string>
    <string name="travel_agency_hint">请输入所属旅行社</string>
    <string name="good_at_scenic">擅长景区</string>
    <string name="good_at_scenic_hint">擅长的景区，用空格分开</string>
    <string name="submit_check">提交审核</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender_unknown">未知</string>
    <string name="gender_any">不限</string>

    <!-- 导游个人页 -->
    <string name="guide_profile_title">导游信息</string>
    <string name="guide_city">导游城市</string>
    <string name="good_scenic">擅长景区</string>
    <string name="guide_history">导游记录</string>
    <string name="guide_card_id">导游证号</string>
    <string name="goto_booking">我要预约</string>
    <string name="in_booking">预约导游中...</string>
    <string name="booking_failed">预约导游失败</string>
    <string name="booking_success">预约导游成功</string>
    <string name="booking_confirm_title">预约</string>
    <string name="booking_guide">导游</string>
    <string name="booking_destination">我要去</string>
    <string name="booking_destination_hint">请输入景区名</string>
    <string name="booking_cannot_booking_yourself">您不能预约自己</string>
    <string name="booking_start_time">出发时间</string>
    <string name="booking_end_time">结束时间</string>
    <string name="booking_statisfaction">简短评价</string>
    <string name="booking_statisfaction_hint">评价此导游</string>
    <string name="immediately_booking">立即预约</string>
    <string name="call_dialog_message">确定呼叫%s吗？</string>
    <string name="call_dialog_positive">确定</string>
    <string name="call_dialog_negative">取消</string>

    <!-- 查找 -->
    <string name="search_city">城市</string>
    <string name="search_gender">性别</string>
    <string name="search_scenic">景点</string>
    <string name="search_scenic_hint">输入景点名</string>

    <!-- 预约单 -->
    <string name="order_title">预约单</string>
    <string name="destination">目的地</string>
    <string name="cancel">取消</string>
    <string name="accept">接受</string>
    <string name="refuse">忽略</string>
    <string name="in_cancel">取消预约中...</string>
    <string name="cancel_invite_failed">取消预约失败</string>
    <string name="in_statisfaction">评价中...</string>
    <string name="satisfaction_failed">评价失败</string>
    <string name="accepting_invite">接受预约中...</string>
    <string name="accept_invite_failed">接受预约失败</string>
    <string name="refusing_invite">忽略预约中...</string>
    <string name="refuse_invite_failed">忽略预约失败</string>
    <string name="broadcast_title">广播</string>
    <string name="send_broadcast">发起广播</string>
    <string name="guide_gender">导游性别</string>
    <string name="sending_broadcast">广播发送中...</string>
    <string name="broadcast_failed">您的广播发送失败</string>
    <string name="broadcast_success">您的广播已经发送到附近的导游，请等待他们主动联系您。</string>

    <!-- 个人主页 -->
    <string name="profile_title">个人主页</string>
    <string name="unlogin">未登录</string>
    <string name="change_user_info_dialog_msg">您修改了个人信息，确认不保存退出吗？</string>
    <string name="change_user_info_dialog_positive">确认</string>
    <string name="change_user_info_dialog_negative">取消</string>
    <string name="menu_save">保存</string>

    <!-- 导游历史 -->
    <string name="guide_record_title">导游记录</string>

    <!-- 修改密码 -->
    <string name="change_pwd_title">修改密码</string>
    <string name="old_pwd">旧密码</string>
    <string name="old_pwd_hint">6-30位数字或字母</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_hint">6-30位数字或字母</string>
    <string name="new_pwd_confirm">确认密码</string>
    <string name="new_pwd_confirm_hint">请再次输入新密码</string>

</resources>