<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_border"
        android:minHeight="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/old_pwd_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/old_pwd"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/old_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="#00000000"
            android:gravity="center_vertical|right"
            android:hint="@string/old_pwd_hint"
            android:inputType="textPassword"
            android:textColor="@color/default_text_color"
            android:textColorHint="@color/default_hint_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_top"
        android:minHeight="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/new_pwd_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/new_pwd"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/new_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="#00000000"
            android:gravity="center_vertical|right"
            android:hint="@string/new_pwd_hint"
            android:inputType="textPassword"
            android:textColor="@color/default_text_color"
            android:textColorHint="@color/default_hint_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_bottom"
        android:minHeight="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/new_pwd_confirm_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/new_pwd_confirm"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/new_pwd_confirm_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="#00000000"
            android:gravity="center_vertical|right"
            android:hint="@string/new_pwd_confirm_hint"
            android:inputType="textPassword"
            android:textColor="@color/default_text_color"
            android:textColorHint="@color/default_hint_color"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/change_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_orange"
        android:enabled="false"
        android:gravity="center"
        android:text="确定"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>