<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_top" >

            <TextView
                android:id="@+id/tourguide_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/tourguide"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tourguide_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/tourguide_label"
                android:gravity="right"
                android:text="张三导"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_middle" >

            <TextView
                android:id="@+id/destination_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/destination"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/destination_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/destination_label"
                android:gravity="right"
                android:text="八达岭长城"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_middle" >

            <TextView
                android:id="@+id/start_time_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/booking_start_time"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/start_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/start_time_label"
                android:gravity="right"
                android:text="2013/10/12"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_bottom" >

            <TextView
                android:id="@+id/end_time_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/booking_end_time"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/end_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/end_time_label"
                android:gravity="right"
                android:text="2013/10/12"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/satisfaction_good"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_singin"
            android:text="@string/satisfaction_good"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/satisfaction_bad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_singup"
            android:text="@string/satisfaction_bad"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>